# Caramel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  assembly.s  caramel.out  chef.py
chef/: __init__.py  build.py  chef.py  clean.py  logger.py  test.py
doc/: grammar.md  p_51.c  p_51.md  p_510.c  p_510.md  p_511.c  p_511.md  p_512.md  p_513.md  p_514.md  p_515.c  p_515.md  p_52.c  p_52.md  p_53.c  p_53.md  p_54.md  p_55.c  p_55.md  p_56.c  p_56.md  p_57.c  p_57.md  p_58.c  p_58.md  p_59.c  p_59.md  semantic.md
grammar/: CHANGELOG.md  Caramel.ext.g4  Caramel.g4  Caramel_v1.g4  Caramel_v2.g4  Caramel_v3.g4  Caramel_v4.g4  Caramel_v5.g4  Caramel_v6.g4  Caramel_v7.g4  Caramel_v8.g4  Caramel_v9.g4
lib/: libantlr4-runtime.so.4.7.1
misc/: init.gdb  run_caramel_out_gdb.sh
src/: Any.h  AstDotNode.cpp  AstDotNode.h  BackEnd.cpp  BackEnd.h  Common.h.in  Config.h  Console.h  FrontEnd.cpp  FrontEnd.h  Logger.cpp  Logger.h  main.cpp  tclap.h
src/ast/context/: Context.cpp  Context.h
src/ast/operators/: BinaryOperator.h  Operator.h  UnaryOperator.h
src/ast/statements/: Statement.cpp  Statement.h  StatementType.h
src/ast/symboltable/: ArraySymbol.cpp  ArraySymbol.h  FunctionParameterSignature.h  FunctionSymbol.cpp  FunctionSymbol.h  PrimaryType.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  SymbolType.h  TypeSymbol.cpp  VariableSymbol.cpp  VariableSymbol.h
src/data-structures/: ArrayAccess.cpp  ArrayAccess.h  AtomicExpression.cpp  AtomicExpression.h  BinaryExpression.cpp  BinaryExpression.h  BinaryOperator.cpp  BinaryOperator.h  Constant.cpp  Constant.h  Context.cpp  Context.h  ControlBlock.cpp  ControlBlock.h  Declaration.cpp  Declaration.h  Definition.cpp  Definition.h  Expression.cpp  Expression.h  FunctionCall.cpp  FunctionCall.h  FunctionDefinition.cpp  FunctionDefinition.h  Identifier.cpp  Identifier.h  IfBlock.cpp  IfBlock.h  Jump.cpp  Jump.h  LValue.cpp  LValue.h  Operator.cpp  Operator.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  SymbolTable.cpp  SymbolTable.h  (+10 more)
src/datastructure/: ArrayAccess.cpp  ArrayAccess.h  AtomicExpression.h  BinaryExpression.cpp  BinaryExpression.h  BinaryOperator.h  Constant.cpp  Constant.h  Context.cpp  Context.h  ControlBlock.h  Declaration.cpp  Declaration.h  Definition.cpp  Definition.h  Expression.cpp  Expression.h  FunctionCall.cpp  FunctionCall.h  FunctionDeclaration.cpp  FunctionDeclaration.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionSymbol.cpp  FunctionSymbol.h  Identifier.cpp  Identifier.h  IfBlock.cpp  IfBlock.h  Jump.h  LValue.cpp  LValue.h  Operator.h  PrimaryType.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  Symbol.cpp  Symbol.h  (+14 more)
src/datastructure/context/: Context.cpp  Context.h
src/datastructure/operators/: BinaryOperator.h  Operator.h  UnaryOperator.h
src/datastructure/statements/: IR.h  Statement.cpp  Statement.h
src/datastructure/symboltable/: ArraySymbol.cpp  ArraySymbol.h  FunctionSymbol.cpp  FunctionSymbol.h  PrimaryType.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  TypeSymbol.cpp  TypeSymbol.h  VariableSymbol.cpp  VariableSymbol.h
src/exceptions/: ArrayBlockSizeExceedsDeclarationException.cpp  ArrayBlockSizeExceedsDeclarationException.h  ArraySizeMismatchException.cpp  ArraySizeMismatchException.h  ArraySizeNonConstantException.h  DeclarationMismatchException.cpp  DeclarationMismatchException.h  FunctionAlreadyDefined.h  FunctionCallArgumentsNumberMismatchException.h  FunctionCallArgumentsTypeMismatchException.h  FunctionDefinitionNumberOfParametersMismatchError.cpp  FunctionDefinitionNumberOfParametersMismatchError.h  FunctionDefinitionParameterNameMismatchError.cpp  FunctionDefinitionParameterNameMismatchError.h  FunctionDefinitionParameterTypeMismatchError.cpp  FunctionDefinitionParameterTypeMismatchError.h  FunctionNameAlreadyDeclaredError.cpp  FunctionNameAlreadyDeclaredError.h  NotImplementedException.h  SemanticError.cpp  SemanticError.h  SymbolAlreadyDeclaredError.cpp  SymbolAlreadyDeclaredError.h  SymbolAlreadyDeclaredException.h  SymbolAlreadyDefinedError.cpp  SymbolAlreadyDefinedError.h  SymbolAlreadyDefinedException.h  UndefinedSymbolError.cpp  UndefinedSymbolError.h  UndefinedSymbolException.h  VariableAlreadyDefined.h
src/ir/: BasicBlock.cpp  BasicBlock.h  CFG.cpp  CFG.h  CFGVisitor.h  IR.cpp  IR.h  IRVisitor.h  instructions.cpp  instructions.h
src/listeners/: DotExportListener.h
src/util/: Common.h  SourceFileUtil.cpp  SourceFileUtil.h
src/utils/: Common.h  SourceFileUtil.cpp  SourceFileUtil.h
src/visitors/: ASTVisitor.cpp  ASTVisitor.h  ASTVisitor_Arrays.cpp  ASTVisitor_ControlBlock.cpp  ASTVisitor_Expression.cpp  ASTVisitor_Functions.cpp  ASTVisitor_Variables.cpp  AbstractSyntaxTreeVisitor.cpp  AbstractSyntaxTreeVisitor.h  AbstractSyntaxTreeVisitor_Arrays.cpp  AbstractSyntaxTreeVisitor_ControlBlock.cpp  AbstractSyntaxTreeVisitor_Expression.cpp  AbstractSyntaxTreeVisitor_Functions.cpp  AbstractSyntaxTreeVisitor_Variables.cpp
tests/back-end/: additive_expression.c  additive_expressions.c  additive_expressions_2.c  array_access_assignment.c  array_access_example_copy.c  array_as_param.c  array_definition_with_assignement.c  assignment_binary_operators.c  bitwise_and.c  bitwise_or.c  bitwise_shifts.c  bitwise_xor.c  bug_with_and.c  comma_operator.c  comparisons.c  conjunction_expressions.c  disjunction_expressions.c  division.c  do_while_block.c  easy_tests.c  egality_expressions.c  for_block.c  for_block_complexe_init.c  function_call_3_params.c  function_call_9_params.c  function_call_exit.c  function_call_putchar.c  function_call_putchar_bis.c  get_char.c  if_block.c  if_block_complexe_cond.c  interactive_factorial.c  modulo.c  multiplicative_expression.c  quicksort.c  return_in_if.c  simple_expression.c  substraction.c  unary_not_operator.c  unary_plus_minus_operators.c  (+2 more)
tests/programs/: ackermann.c  displayNumber.c  factorial.c  fibonacci.c  quicksort.c  syracuse.c
tools/: __init__.py  build.py  chef.py  clean.py  compile.py  cook.py  logger.py  test.py  test_grammar.py
(+423 files in other folders)
